Implemented ChooseType Activity

--- a/app/src/main/res/layout/activity_choose_type.xml
+++ b/app/src/main/res/layout/activity_choose_type.xml
@@ -15,13 +15,13 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="60dp"
-        app:layout_constraintBottom_toTopOf="@+id/butDone"
+        app:layout_constraintBottom_toTopOf="@+id/butProceed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvChoose">
 
         <RadioButton
-            android:id="@+id/rb1"
+            android:id="@+id/rbTotAndMov"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -34,7 +34,7 @@
             android:layout_weight="1" />
 
         <RadioButton
-            android:id="@+id/rb2"
+            android:id="@+id/rbOnlyTot"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -47,7 +47,7 @@
             android:layout_weight="1" />
 
         <RadioButton
-            android:id="@+id/rb3"
+            android:id="@+id/rbOnlyMov"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -55,7 +55,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/butDone"
+        android:id="@+id/butProceed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
